# Telex-framework

./: .gitignore  CMakeLists.txt  README.md  gempyre.cbp  mingw_install.bat  msvc_install.bat  telex.md  telex_graphics.md  telex_utils.md
affiliates/: affiliates.cbp
affiliates/client/: gempyreclient.cbp
affiliates/include/: affiliates_include.cbp
affiliates/test/: CMakeLists.txt
affiliates/test_rpc/: CMakeLists.txt
blog/: blog.cbp
blog/hello/: hello.cbp
blog/minihello/: minihello.cbp
examples/audio/: CMakeLists.txt  audiotest
examples/drawcanvas/: CMakeLists.txt  drawcanvastest
examples/eval/: CMakeLists.txt  evaltest
examples/hello/: CMakeLists.txt  hello
examples/hello2/: CMakeLists.txt  hello2
examples/helloworld/: CMakeLists.txt  helloworld
examples/imageblit/: CMakeLists.txt  imageblittest
examples/minihello/: CMakeLists.txt  minihello
examples/snowflakes/: CMakeLists.txt  snowflakestest
examples/tick/: CMakeLists.txt  tick
gempyrelib/: CMakeLists.txt
gempyrelib/cmake/: FindUsocket.cmake.in  FindUsockets.cmake.in  Finduva.cmake.in  config.cmake.in
gempyrelib/include/: gempyre.h  gempyre_graphics.h  gempyre_utils.h
gempyrelib/js/: gempyre.js
gempyrelib/src/: android.cpp  core.cpp  graphics.cpp  server.cpp  server.h  timer.cpp  timer.h  uiapp.cpp  uiapp.h  utils.cpp
scripts/: win_inst.bat
telexlib/include/: telex.h  telex_graphics.h  telex_utils.h
telexlib/js/: telex.js
telexlib/src/: telex.cpp  timer.cpp  timer.h
test/: CMakeLists.txt  tests.cbp
test/apitests/: CMakeLists.txt  apitests.cpp
test/drawcanvas/: drawcanvastest.cbp
test/eval/: evaltest.cbp
test/helloworld/: helloworld.cbp
test/imageblit/: imageblittest.cbp
test/snowflakes/gui/: snowflakes.html
test/snowflakes/src/: main.cpp
test/tick/: tick.cbp
test/unittests/: tests.cpp  unittests.cbp
